# attendance-tracker

./: .gitignore  Cargo.toml  README.md  TODO-n-bugs.md  bugs-identified.md  run_full_app.sh
back-end/: .env.example  Cargo.toml  schema.sql
back-end/migrations/: 0001_initial_schema.sql  0002_unique_device_schema.sql
back-end/src/: config.rs  errors.rs  main.rs
back-end/src/api/: attendance.rs  auth.rs  confirmation.rs  confirmation_codes.rs  courses.rs  export.rs  mod.rs  preferences.rs  qrcode.rs  upload.rs  uploads.rs  ws.rs
back-end/src/db/: attendance.rs  course.rs  courses.rs  database.rs  device_submissions.rs  migrations.rs  mod.rs  preferences.rs  schema.rs
back-end/src/middleware/: auth.rs  host_only.rs  mod.rs  rate_limit.rs
back-end/src/models/: attendance.rs  confirmation_code.rs  course.rs  mod.rs  preferences.rs  user.rs
back-end/src/services/: attendance.rs  auth.rs  confirmation.rs  confirmation_codes.rs  course.rs  export.rs  mod.rs  moodle.rs  preference.rs  preferences.rs  qrcode.rs  realtime.rs  statistics.rs  storage.rs  ws_server.rs
back-end/src/utils/: error.rs  mod.rs  network.rs  time.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODING_GUIDELINES.md  DATA_MODELS.md  DIRECTORY_STRUCTURE.md  LLM_DEV_GUIDELINES.md  LLM_REVIEW_CHECKLIST.md
src/: main.rs
src/ui/frontend/: .gitignore  astro.config.mjs  package.json
src/ui/frontend/attendance-ui/: package.json  tailwind.config.cjs
src/ui/frontend/attendance-ui/src/components/: CourseDetails.tsx  Logo.tsx
src/ui/frontend/attendance-ui/src/routes/: index.tsx
src/ui/frontend/src/components/: Attendance.tsx  CourseDetails.astro  CourseDetails.tsx  DropdownChevron.astro  DropdownChevron.tsx  Logo.astro  NewsandComments.tsx  OfficeHours.astro  OfficeHours.tsx
src/ui/frontend/src/pages/: index.astro
src/ui/frontend/src/routes/: [...404].tsx  index.tsx
src/ui/next-frontend/: package-lock.json
src/ui/next-frontend/app/: page.tsx
src/ui/next-frontend/components/: Attendance.tsx  CourseDetails.tsx  DropdownChevron.tsx  Logo.tsx  NewsandComments.tsx  OfficeHours.tsx
web-ui/: next.config.ts  package.json
web-ui/app/: layout.tsx  page.tsx
web-ui/app/api/upload-logo/: route.ts
web-ui/app/attendance/: layout.tsx  page.tsx
web-ui/app/components/dashboard/: AttendanceCounter.tsx  ConfirmationCode.tsx  CourseHeader.tsx  CourseNews.tsx  CourseSelector.tsx  DashboardFooter.tsx  DashboardLayout.tsx  QRCodeDisplay.tsx
web-ui/app/components/icons/: Pencil.tsx
web-ui/app/components/ui/: LogoUploader.tsx
web-ui/app/context/: CourseContext.tsx
web-ui/app/hooks/: useAttendanceWebSocket.ts  useClickOutside.ts  useConfirmationCode.ts  useCurrentTime.ts
web-ui/app/services/: confirmationCodeService.ts  preferencesService.ts
web-ui/app/types/: course.ts
