[package]
name = "back-end"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "attendance-tracker"
path = "src/main.rs"

[dependencies]
# Web framework
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.10.2"
actix-web-actors = "4.3.1"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# QR code generation
qrcode = "0.14.1"
image = "0.25.5"

# Authentication
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
rand = "0.9.0"

# Utilities
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
csv = "1.3.1"
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.26"
local-ip-address = "0.6.3"
webbrowser = "1.0.4"
anyhow = "1.0.97"
thiserror = "2.0.12"
futures = "0.3.31"
reqwest = "0.12.15"
mime = "0.3.17"
