[package]
name = "back-end"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "attendance-tracker"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.8.0"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-multipart = "0.7.0" # For file uploads
actix-web-actors = "4.3.0" # For WebSockets
actix = "0.13.3" # Actor framework

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid", "json"] }
tokio = { version = "1.44.2", features = ["full"] } # Update tokio

# Serialization/Deserialization
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

# QR code generation
qrcode = "0.14.1"
image = { version = "0.25.1", default-features = false, features = ["png"] } # Specify PNG support

# Utilities
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
csv = "1.3.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.22"
local-ip-address = "0.6.1"
webbrowser = "1.0.1" # For opening browser
anyhow = "1.0.86" # Error handling
thiserror = "2.0.12" # Error handling derivation
futures-util = "0.3.30" # For stream processing in multipart
rand = "0.9.0" # For confirmation code generation

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3